# audiocodec.nosefart

./: Makefile.am  configure.in
addon/: addon.xml
lib/nosefart/: Makefile.am
lib/nosefart/win32/: NoseFartXBMC.vcxproj  NoseFartXBMC.vcxproj.filters
src/: Makefile.am  nosefart.cpp
windows/: addon.sln  audiocodec.nosefart.vcxproj  audiocodec.nosefart.vcxproj.filters
